# nucleotide

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/: user-guide.md
docs/demos/: build-and-lookup.cast  build-and-lookup.sh  fingerprint-actor.cast  fingerprint-actor.sh
nucleotide/: __init__.py  actor.py  build.py  cli.py  fetch.py  fingerprint.py  matchers.py  parse.py  payload.py  runtime.py  sigma.py  signatures.py  snippets.py
tests/: test_actor.py  test_build.py  test_fingerprint.py  test_matchers.py  test_parse.py  test_payload.py  test_sigma.py  test_signatures.py  test_snippets.py
tests/fixtures/: README.md  api-quux.yaml  network-redis.yaml  ssrf-oast.yaml  wp-bar.yaml  wp-foo.yaml
