[project]
name = "nucleotide"
version = "0.1.0"
description = "Build a URL-snippet lookup table that maps observed URLs back to the Nuclei template they came from."
requires-python = ">=3.10"
dependencies = ["pyyaml>=6.0"]

[project.scripts]
nucleotide = "nucleotide.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["nucleotide*"]
